# Sentiment_Analysis_Reloaded

./: main.py  pyproject.toml
data/: test.csv  train.csv
notebooks/: sentiment_analysis.ipynb
