[project]
name = "sentiment-analysis-reloaded"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.11.0",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "spacy>=3.8.7",
    "torch>=2.9.0",
    "transformers>=4.57.1",
]
